--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-responsive": "^8.2.0",
+    "react-responsive-carousel": "^3.2.18"
   },
   "devDependencies": {
     "@types/node": "^14.14.36",
     "@types/react": "^17.0.3",
+    "@types/react-responsive": "^8.0.2",
     "typescript": "^4.2.3"
   }
 }
